# omni

./: README.md  package-lock.json  package.json
public/: global.css  index.html
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
